--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background: linear-gradient(to right, white, white);
     background-attachment: fixed;
-    color: white;
+    color:aliceblue;
 }
 .navbar {
     box-shadow: 0 4px 6px rgba(23, 23, 23, 0.3);
@@ -80,3 +80,51 @@ footer {
   .body2{
     background-color: seagreen;
   }
+  .navbar-transparent {
+    background: transparent;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    z-index: 10;
+    box-shadow: none; 
+  }
+  .nav-link:hover {
+    color: rgb(0, 0, 0);
+  }
+  .nav-link{
+    color: aliceblue;
+    font-weight: 500;
+  }
+.carousel-item {
+  height: 500px; 
+  position: relative; 
+}
+
+
+.carousel-item video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+
+.carousel-control-prev, .carousel-control-next {
+  position: absolute;
+  top: 50%; /* Center vertically */
+  transform: translateY(-50%);
+}
+.sharp-edged-card {
+  border-radius: 0 !important;
+  display: flex;
+  flex-direction: column;
+  height: 100%; 
+}
+
+.card-img-top {
+  height: 200px; 
+  object-fit: cover;  
+}
+
+.card-body {
+  flex-grow: 1;  
+}
